{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 93,
  "lineage": "e2c315ea-1ebd-cb71-9171-e3e6b8c03dde",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:908402822601:security-group/sg-0f5d64df8bc3562c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5d64df8bc3562c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "nixos-opentofu-incus-v3-efs-fd0ff9847f5c76adb8f4ddca32",
            "name_prefix": "nixos-opentofu-incus-v3-efs-",
            "owner_id": "908402822601",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c04f5f2d7063b88c"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true,
          "identity": {
            "account_id": "908402822601",
            "id": "sg-0f5d64df8bc3562c3",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:908402822601:security-group/sg-08772f5c95f83e036",
            "description": "NixOS bootstrap SSH ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08772f5c95f83e036",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MicroK8s join port (entre nodes do cluster)",
                "from_port": 25000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH custom port",
                "from_port": 2409,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2409
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH default bootstrap",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nixos-opentofu-incus-v3-sg",
            "name_prefix": "",
            "owner_id": "908402822601",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nixos-opentofu-incus-v3-sg"
            },
            "tags_all": {
              "Name": "nixos-opentofu-incus-v3-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c04f5f2d7063b88c"
          },
          "sensitive_attributes": [],
          "identity": {
            "account_id": "908402822601",
            "id": "sg-08772f5c95f83e036",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}